--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
 	</p>
 	<form onsubmit="psu.setVoltage(document.getElementById('voltageInput').value); return false;">
 		<input type="text" name="voltage" id="voltageInput" value="12.00" class="connected">V
+		<div id="channelOptions">
+		      	<input type="radio" name="channel" value="1" id="channel1" class="connected"> 1
+		      	<input type="radio" name="channel" value="2" id="channel2" class="connected"> 2
+			<input type="radio" name="channel" value="3" id="channel3" class="connected"> 3
+		</div>
 		<input type="submit" value="Set" class="connected">
 	</form>
 	<table id="display" class="blurred">
@@ -587,11 +592,15 @@
 
 
 		let psu;
+		const channelOptions = document.getElementById('channelOptions');
 		if(hash.toUpperCase() == 'DPS') {
+			channelOptions.style.display = 'none';
 			psu = new DPS();
 		} else if(hash.toUpperCase() == 'TOE') {
 			psu = new TOE();
+			channelOptions.style.display = 'block';
 		} else {
+			channelOptions.style.display = 'none';
 			psu = new PSP();
 		}
 
