--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 		function getSelectedChannel() {
 			const channelOptions = document.getElementById('channelOptions');
-		      	const selectedChannel = channelOptions.querySelector('input[name="channel"]:checked');
+		      	const selectedChannel = channelOptions.querySelector('input[name="channel"]:checked').value;
 			console.log("selected channel " + selectedChannel);
 		      	return selectedChannel.value;
 		}
