--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
 		<div id="channelOptions">
 		      	<input type="radio" name="channel" value="1" id="channel1" class="connected" checked> CH 1
 		      	<input type="radio" name="channel" value="2" id="channel2" class="connected"> CH 2
-			<input type="radio" name="channel" value="3" id="channel3" class="connected"> CH 3
 		</div>
 	</form>
 	<table id="display" class="blurred">
@@ -581,23 +580,23 @@
 
 			requestStatus() {
 				const selectedChannel = getSelectedChannel();
-				this.writeSerial('SEL ${selectedChannel};MV?;MC?;V?;C?;MP?;P?;EX?;');
+				this.writeSerial('SEL ' + selectedChannel + ';MV?;MC?;V?;C?;MP?;P?;EX?;');
 				this.readSerial();
 			}
 			
 			writeVoltage(voltage) {
 				const selectedChannel = getSelectedChannel();
-				this.writeSerial('SEL ${selectedChannel};V ' + voltage );
+				this.writeSerial('SEL ' + selectedChannel + ';V ' + voltage );
 			}
 			
 			powerOn() {
 				const selectedChannel = getSelectedChannel();
-				this.writeSerial('SEL ${selectedChannel};EX 1');
+				this.writeSerial('SEL ' + selectedChannel + ';EX 1');
 			}
 			
 			powerOff() {
 				const selectedChannel = getSelectedChannel();
-				this.writeSerial('SEL ${selectedChannel};EX 0');
+				this.writeSerial('SEL ' + selectedChannel + ';EX 0');
 			}
 		}
 
