remov wrong request

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			const channelOptions = document.getElementById('channelOptions');
 		      	const selectedChannel = channelOptions.querySelector('input[name="channel"]:checked').value;
 			console.log("selected channel " + selectedChannel);
-		      	return selectedChannel.value;
+		      	return selectedChannel;
 		}
 
 		class PSU {
