remove ; at the end

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 
 			requestStatus() {
 				const selectedChannel = getSelectedChannel();
-				this.writeSerial('SEL 1;MV?;MC?;V?;C?;MP?;P?;EX?;');
+				this.writeSerial('SEL 1;MV?;MC?;V?;C?;MP?;P?;EX?');
 				this.readSerial();
 			}
 			
